--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -3,4 +3,4 @@ title: ArtemisCloud Documentation
 version: dev
 nav:
   - modules/ROOT/nav.adoc
-  - modules/broker-ocp/nav.adoc
+  - modules/operator/nav.adoc
